--- a/resume.tex
+++ b/resume.tex
@@ -3,7 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{textcomp,multicol}
 \usepackage[hidelinks]{hyperref}
-\usepackage[bottom=1em,top=4em]{geometry}
+\usepackage[bottom=1em,top=4em,left=4em]{geometry}
 
 \begin{document} 
 \name{Sean P. DuBois} 
