Fix margins, need to look into new header

--- a/resume.tex
+++ b/resume.tex
@@ -3,11 +3,11 @@
 \usepackage[T1]{fontenc}
 \usepackage{textcomp,multicol}
 \usepackage[hidelinks]{hyperref}
-\usepackage[bottom=1em,top=4em,left=4em]{geometry}
+\usepackage[bottom=1em,top=4em,left=3em]{geometry}
 
 \begin{document} 
 \name{Sean P. DuBois} 
-\address{\href{mailto:sean@siobud.com}{sean@sioBuD.com} \\ \href{http://siobud.com}{sioBuD.com} \\ \href{http://github.com/sean-der}{GitHub.com/Sean-Der}}
+\address{\href{mailto:sean@siobud.com}{\hspace{1em}sean@sioBuD.com} \\ \href{http://siobud.com}{\hspace{1em}sioBuD.com} \\ \href{http://github.com/sean-der}{\hspace{1em}GitHub.com/Sean-Der}}
 
 \begin{resume}
 \vspace{1em}
