I started a new job about two months ago so updating the job fields, also word smithing in a few places

--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,15 @@
 
 
 \section{\centerline{EXPERIENCE}} 
-{\bf Software Developer} \hfill 2012 \\
+{\bf Software Developer} \hfill 2013\\
+    \href{http://www.onshored.com}{{\it onShore Development}} - Creator of Webcheckout, an scheduling and asset management application
+	\begin{itemize}  \itemsep -2pt 
+		\item Maintained and wrote new features on established software
+		\item Used Emacs with SLIME to create a full featured development enviroment
+		\item Converted HTML forms into responsive async interfaces with Dojo
+    \end{itemize}
+
+{\bf Software Developer} \hfill 2012 - 2013\\
     \href{http://www.saicorporate.com}{{\it System Associates}} - Developer of full stack software and hardware for major hotels
 	\begin{itemize}  \itemsep -2pt 
     	\item Wrote custom PBX that serves multiple hotel chains
@@ -34,16 +42,9 @@
 {\bf Software Developer} \hfill 2011 - 2012 \\
     \href{http://www.vpcusa.com}{{\it Virtual Technologies Group}} - VoIP and IT services provider 
 	\begin{itemize}  \itemsep -2pt
-    	\item Wrote custom dialplan for school systems
+    		\item Wrote custom dialplan for school systems
 		\item Created a web portal that simplified a multi-day process to 5 minutes
 		\item Managed multiple Debian LAMP servers
-    \end{itemize}
-
-{\bf Help Desk} \hfill 2011 \\
-    \href{http://www.sjjtitans.org}{{\it St. John's Jesuit High School}} - private high school
-	\begin{itemize}  \itemsep -2pt
-    	\item Worked hands on with teachers to solve tasks
-		\item Helped implement a teaching environment of one iPad per student
     \end{itemize}
 
 \section{\centerline{SKILLS}}
@@ -52,11 +53,11 @@
 \begin{multicols}{2}
 \begin{itemize}  \itemsep -2pt
 	\item[] {\it Built Software With}
+	\item Lisp (Scheme and Common Lisp)
 	\item PHP
 	\item ECMAScript (Javascript)
 	\item HTML/CSS
 	\item C
-	\item Scheme (Lisp)
 	\item SQL
 	\item \LaTeX
 	\item[] {\it Solved Problems With}
@@ -75,26 +76,28 @@
 \begin{multicols}{2}
 \begin{itemize}  \itemsep -2pt
 	\item Apache/Nginx
-	\item Unix (Primarily GNU/Linux and *BSD)
+	\item Unix (Primarily FreeBSD and Debian)
 	\item MySQL/PostgreSQL/SQLite
 	\item Asterisk/FreePBX
-	\item jQuery
+	\item jQuery/Dojo
 	\item CherryPy
 	\item PhoneGap
 	\item git/Subversion
+	\item Emacs/SLIME
+	\item Vim
 \end{itemize}
 \end{multicols}
 
 \section{\centerline{PROJECTS}}
 \vspace{1em}
 \href{http://flyspray.org}{{\bf Flyspray}} - \it{A simple, but powerful PHP bugtracker.} \\ 
-\textup{Major contributions, listed as contributer}\\
+\textup{Minor contributions, listed as contributer}\\
 \\
 \href{http://portix.bitbucket.org/dwb/}{{\bf dwb}} - \it{A minimal web browser written in C, with vim keybindings.} \\ 
 \textup{Fixed multiple bugs, listed as contributer}\\
-
+\vspace{-1em}
 \section{\centerline{INTERESTS}}
-{\upshape Vinyl, Strange Films, Interesting Cities, Free Software and meat free food}
+{\upshape Vinyl, Horror Films, Big Cities, Free Software and meat free food}
 
 \end{resume}
 \end{document}
