--- a/resume.tex
+++ b/resume.tex
@@ -6,17 +6,25 @@
 \usepackage[bottom=1em,top=3em,left=3em]{geometry}
 
 \begin{document}
-\name{Sean P. DuBois}
-\address{\href{mailto:sean@siobud.com}{\hspace{1em}sean@sioBuD.com} \\ \href{http://github.com/sean-der}{\hspace{1em}GitHub.com/Sean-Der}}
+\name{Sean DuBois}
+\address{\href{maihto:sean@siobud.com}{\hspace{1em}sean@sioBuD.com} \\ \href{http://github.com/sean-der}{\hspace{1em}GitHub.com/Sean-Der}}
 
 \begin{resume}
 \vspace{1em}
 
 \section{\centerline{EXPERIENCE}}
-{\bf Software Developer} \hfill 2013 - *\\
+{\bf Software Developer} \hfill 2014 - *\\
+    \href{https://www.etsy.com/}{{\it Etsy}} - e-commerce website focused on handmade
+    \begin{itemize}  \itemsep -2pt
+        \item Member of the Community Engineering Group, building tools to aid personnel connections
+        \item Improved \href{https://github.com/elasticsearch/kibana}{{\it Kibana}}, adding aggregations and features for internal use
+        \item Worked on internal IRC client that aimed to humanize users, adding proprietary extensions
+    \end{itemize}
+
+
+{\bf Software Developer} \hfill 2013 - 2014\\
     \href{http://www.onshored.com}{{\it onShore Development}} - Creator of Webcheckout, an scheduling and asset management application
     \begin{itemize}  \itemsep -2pt
-        \item Maintained and wrote new features on established ten year old software
         \item Converted Web App to be API driven, using Common Lisp and PostgreSQL on the backend
         \item Ported to frontend to Angular, replacing projects in Dojo and jQuery
         \item Replaced legacy markup/styling with Bootstrap
@@ -50,22 +58,18 @@
 \vspace{-1em}
 \begin{multicols}{2}
 \begin{itemize}  \itemsep -2pt
-    \item[] {\it Built Software With}
+    \item[] {\it Build Software With}
     \item Lisp (Scheme and Common Lisp)
-    \item PHP
-    \item ECMAScript (Javascript)
+    \item Javascript
     \item HTML/CSS
     \item C
     \item SQL
     \item Go
-    \item \LaTeX
     \item[] {\it Solved Problems With}
     \item Shell Scripts
-    \item C++
-    \item Java
-    \item MATLAB
-    \item x86 Assembly (Gas)
-    \item Perl
+    \item PHP
+    \item \LaTeX
+    \item Assembler (x86 Gas)
     \item Python
 \end{itemize}
 \end{multicols}
@@ -78,27 +82,21 @@
     \item MySQL/PostgreSQL/SQLite
     \item Asterisk
     \item jQuery/Dojo/Angular
-    \item PhoneGap
     \item git/Subversion
-    \item Emacs/Vim
     \item Bootstrap/Foundation
 \end{itemize}
 \end{multicols}
 
 \section{\centerline{PROJECTS}}
 \vspace{1em}
-\href{http://flyspray.org}{{\bf Flyspray}} - \it{A simple, but powerful PHP bugtracker.} \\
-\textup{Minor contributions, listed as contributer}\\
+\href{https://github.com/Sean-Der/fail2web}{{\bf fail2web}} - \it{fail2ban GUI, written with Go and AngularJS.} \\
+\textup{Creator, contributed to \href{https://github.com/fail2ban/fail2ban}{{\bf fail2ban}} and \href{https://github.com/kisielk/og-rek}{{\bf ogorek}}}\\
 \\
 \href{http://angularjs.org}{{\bf AngularJS}} - \it{Superheroic JavaScript MVW Framework.} \\
 \textup{Added parameter serialization to ngResource, also submitted some PRs to angular-ui}\\
 \\
 \href{http://portix.bitbucket.org/dwb/}{{\bf dwb}} - \it{A minimal web browser written in C, with vim keybindings.} \\
 \textup{Fixed multiple bugs, listed as contributer}\\
-\vspace{-1.5em}
-
-\section{\centerline{INTERESTS}}
-{\upshape Vinyl, Horror Films, Big Cities and Open Source}
 
 \end{resume}
 \end{document}
