Author and section sequences now line up horizontially

--- a/resume.tex
+++ b/resume.tex
@@ -6,8 +6,8 @@
 \usepackage[bottom=1em,top=3em,left=3em]{geometry}
 
 \begin{document}
-\name{Sean DuBois}
-\address{\href{maihto:sean@siobud.com}{\hspace{1em}sean@sioBuD.com} \\ \href{http://github.com/sean-der}{\hspace{1em}GitHub.com/Sean-Der}}
+\name{\hspace{-2.5em}Sean DuBois}
+\address{\href{maihto:sean@siobud.com}{\hspace{-1em}sean@sioBuD.com} \\ \href{http://github.com/sean-der}{\hspace{-1em}GitHub.com/Sean-Der}}
 
 \begin{resume}
 \vspace{1em}
