--- a/resume.tex
+++ b/resume.tex
@@ -3,7 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{textcomp,multicol}
 \usepackage[hidelinks]{hyperref}
-\usepackage[bottom=1em,top=3em,left=3em]{geometry}
+\usepackage[bottom=1em,top=3em,left=3em,right=5.5em]{geometry}
 
 \begin{document}
 \name{\hspace{-2.5em}Sean DuBois}
@@ -13,61 +13,56 @@
 \vspace{1em}
 
 \section{\centerline{EXPERIENCE}}
-{\bf Software Developer} \hfill 2014 - *\\
-    \href{https://www.etsy.com/}{{\it Etsy}} - e-commerce website focused on handmade
-    \begin{itemize}  \itemsep -2pt
-        \item Member of the Community Engineering Group, building tools to aid personnel connections
-        \item Improved \href{https://github.com/elasticsearch/kibana}{{\it Kibana}}, adding aggregations and features for internal use
-        \item Worked on internal IRC client that aimed to humanize users, adding proprietary extensions
-    \end{itemize}
 
+\href{https://infiniscene.com/}{{\it Infiniscene}} - broadcast studio built on the web \hfill {\bf 2016 - *\space \space \space}
+\begin{itemize}  \itemsep -2pt
+    \item Worked on a backend written in C/C++ solving video performance issues
+    \item Wrote OpenGL/GLSL shaders, and CPU based video effects
+\end{itemize}
 
-{\bf Software Developer} \hfill 2013 - 2014\\
-    \href{http://www.onshored.com}{{\it onShore Development}} - Creator of Webcheckout, an scheduling and asset management application
-    \begin{itemize}  \itemsep -2pt
-        \item Converted Web App to be API driven, using Common Lisp and PostgreSQL on the backend
-        \item Ported to frontend to Angular, replacing projects in Dojo and jQuery
-        \item Replaced legacy markup/styling with Bootstrap
-    \end{itemize}
+\href{https://www.etsy.com/}{{\it Etsy}} - e-commerce website focused on handmade {\bf \hfill 2014 - 2016}
+\begin{itemize}  \itemsep -2pt
+    \item Member of the Community Engineering Group, building tools to aid personnel connections
+    \item Improved \href{https://github.com/elasticsearch/kibana}{{\it Kibana}}, adding aggregations and features for internal use
+    \item Worked on internal IRC client that aimed to humanize users, adding proprietary extensions
+    \item Upgraded Etsy to PHP 7, which involved porting multiple language extensions written in C
+\end{itemize}
 
-{\bf Software Developer} \hfill 2012 - *\\
-    \href{http://www.saicorporate.com}{{\it System Associates}} - Developer of full stack software and hardware for major hotels
-    \begin{itemize}  \itemsep -2pt
-        \item Used Asterisk with custom Dialplan and Applications written in C to create a hosted PBX
-        \item Created a deployment system using git so updates and new installs can be done seamlessly
-        \item Developed a web interface with Foundation Zurb to manage PBX
-        \item Wrote multiple SPAs that shipped as Phone Apps using PhoneGap and jQuery Mobile
-    \end{itemize}
+\href{http://www.onshored.com}{{\it onShore Development}} - Creator of Webcheckout, an scheduling and asset management application {\bf \hfill 2013 - 2014 }
+\begin{itemize}  \itemsep -2pt
+    \item Converted Web App to be API driven, using Common Lisp and PostgreSQL on the backend
+    \item Ported to frontend to Angular, replacing projects in Dojo and jQuery
+    \item Replaced legacy markup/styling with Bootstrap
+\end{itemize}
 
-{\bf Programmer} \hfill 2012 \\
-    \href{https://hackerschool.com}{{\it Hacker School}} - Three month immersive programming collective
-    \begin{itemize}  \itemsep -2pt
-        \item Attended lectures given by leaders in Computer Science and Programming
-        \item Collaborated with others on major Open Source projects like FireFox
-    \end{itemize}
+\href{http://www.saicorporate.com}{{\it System Associates}} - Developer of full stack software and hardware for major hotels {\bf \hfill 2012 - 2016 }
+\begin{itemize}  \itemsep -2pt
+    \item Used Asterisk with custom Dialplan and Applications written in C to create a hosted PBX
+    \item Created a deployment system using git so updates and new installs can be done seamlessly
+    \item Developed a web interface with Foundation Zurb to manage PBX
+    \item Wrote multiple SPAs that shipped as Phone Apps using PhoneGap and jQuery Mobile
+\end{itemize}
 
-{\bf Software Developer} \hfill 2011 - 2012 \\
-    \href{http://www.vpcusa.com}{{\it Virtual Technologies Group}} - VoIP and IT services provider
-    \begin{itemize}  \itemsep -2pt
-        \item Wrote custom dialplan for school systems
-        \item Created a web portal that simplified a multi-day process to 5 minutes
-    \end{itemize}
+\href{http://www.vpcusa.com}{{\it Virtual Technologies Group}} - VoIP and IT services provider {\bf \hfill 2011 - 2012 }
+\begin{itemize}  \itemsep -2pt
+    \item Wrote custom dialplan for school systems
+    \item Created a web portal that simplified a multi-day process to 5 minutes
+\end{itemize}
 
 \section{\centerline{SKILLS}}
 {\bf Programming and Markup Languages}
 \vspace{-1em}
 \begin{multicols}{2}
 \begin{itemize}  \itemsep -2pt
-    \item[] {\it Build Software With}
+    \item[] {\it Built Software With}
     \item Lisp (Scheme and Common Lisp)
-    \item Javascript
-    \item HTML/CSS
-    \item C
+    \item Javascript/HTML/CSS
+    \item C/C++
     \item SQL
     \item Go
+    \item PHP
     \item[] {\it Solved Problems With}
     \item Shell Scripts
-    \item PHP
     \item \LaTeX
     \item Assembler (x86 Gas)
     \item Python
@@ -92,8 +87,8 @@
 \href{https://github.com/Sean-Der/fail2web}{{\bf fail2web}} - \it{fail2ban GUI, written with Go and AngularJS.} \\
 \textup{Creator, contributed to \href{https://github.com/fail2ban/fail2ban}{{\bf fail2ban}} and \href{https://github.com/kisielk/og-rek}{{\bf ogorek}}}\\
 \\
-\href{http://angularjs.org}{{\bf AngularJS}} - \it{Superheroic JavaScript MVW Framework.} \\
-\textup{Added parameter serialization to ngResource, also submitted some PRs to angular-ui}\\
+\href{https://php.net}{{\bf PHP}} - \it{Scripting language especially suited to web development.} \\
+\textup{Added \href{https://wiki.php.net/rfc/class_const_visibility}{{\bf class constant visibility}} to the language. Ported msgpack, oauth, yaml and others to PHP 7}\\
 \\
 \href{http://portix.bitbucket.org/dwb/}{{\bf dwb}} - \it{A minimal web browser written in C, with vim keybindings.} \\
 \textup{Fixed multiple bugs, listed as contributer}\\
