--- a/resume.tex
+++ b/resume.tex
@@ -16,8 +16,8 @@
 
 \href{https://amazon.com/}{{\it Amazon}} - American electronic commerce and cloud computing company \hfill {\bf 2018 - *\space \space \space}
 \begin{itemize}  \itemsep -2pt
+    \item Designed and implemented Pure C WebRTC implementation for embedded devices
     \item Worked on Chromium on Android/Linux/Windows, the foundation for Amazon Silk
-    \item Wrote tooling so developers could use cloud desktops to develop Silk, instead of physical machines
     \item Added support for Mediatek WebRTC H264 encoding on Android
 \end{itemize}
 
@@ -40,8 +40,7 @@
 \href{http://www.onshored.com}{{\it onShore Development}} - Creator of Webcheckout, an scheduling and asset management application {\bf \hfill 2013 - 2014 }
 \begin{itemize}  \itemsep -2pt
     \item Converted Web App to be API driven, using Common Lisp and PostgreSQL on the backend
-    \item Ported to frontend to Angular, replacing projects in Dojo and jQuery
-    \item Replaced legacy markup/styling with Bootstrap
+    \item Ported frontend to Angular/Bootstrap, replacing projects in Dojo and jQuery
 \end{itemize}
 
 \href{http://www.saicorporate.com}{{\it System Associates}} - Developer of full stack software and hardware for major hotels {\bf \hfill 2012 - 2016 }
@@ -61,8 +60,6 @@
     \item Javascript/HTML/CSS
     \item Go
     \item PHP
-    \item Shell Scripts
-    \item \LaTeX
     \item Python
     \item Rust
 \end{itemize}
@@ -70,8 +67,11 @@
 
 \section{\centerline{PROJECTS}}
 \vspace{1em}
-\href{https://github.com/pions/webrtc}{{\bf pions-WebRTC}} - \it{Golang implementation of WebRTC.} \\
+\href{https://github.com/pion/webrtc}{{\bf Pion WebRTC}} - \it{Pure Golang implementation of WebRTC.} \\
 \textup{Creator, Implemented SRTP, SCTP, STUN and ICE. No 3rd party library usage.}\\
+\\
+\href{https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-c}{{\bf amazon-kinesis-video-streams-webrtc-sdk-c}} - \it{Embedded WebRTC Implementation} \\
+\textup{Designed and worked with team of 5 to implement. Used in IoT/Robotics.}\\
 \\
 \href{https://gstreamer.freedesktop.org}{{\bf GStreamer}} - \it{Free pipeline-based multimedia framework.} \\
 \textup{Added \href{https://github.com/GStreamer/gst-plugins-bad/commits/master/ext/aom}{{\bf AV1}} support. Fixed bugs, added flvmux feature}\\
@@ -80,7 +80,7 @@
 \textup{Added \href{https://wiki.php.net/rfc/class_const_visibility}{{\bf class constant visibility}} to the language. Ported msgpack, oauth, yaml and others to PHP 7}\\
 \\
 \href{https://janus.conf.meetecho.com}{{\bf Janus}} - \it{WebRTC gateway, mostly used for relaying RTP} \\
-\textup{Fixed bugs, added small streaming feature}\\
+\textup{Added ECDSA Cert generation, fixed bugs, small streaming features}\\
 \\
 \href{https://www.chromium.org/}{{\bf Chromium}} - \it{open-source Web browser project started by Google} \\
 \textup{Added support for Mediatek WebRTC H264 encoding on Android}\\
