Add WebRTC for the Curious

--- a/resume.tex
+++ b/resume.tex
@@ -50,25 +50,19 @@
     \item Developed a web interface to manage PBX
 \end{itemize}
 
-\section{\centerline{SKILLS}}
-{\bf Programming and Markup Languages}
-\vspace{-1em}
-\begin{multicols}{2}
+\href{http://www.vpcusa.com}{{\it Virtual Technologies Group}} - VoIP and IT services provider {\bf \hfill 2011 - 2012 }
 \begin{itemize}  \itemsep -2pt
-    \item C/C++
-    \item Lisp (Scheme and Common Lisp)
-    \item Javascript/HTML/CSS
-    \item Go
-    \item PHP
-    \item Python
-    \item Rust
+    \item Wrote custom dialplan for school systems
+    \item Created a web portal that simplified a multi-day PBX order/setup process to 5 minutes
 \end{itemize}
-\end{multicols}
 
 \section{\centerline{PROJECTS}}
 \vspace{1em}
 \href{https://github.com/pion/webrtc}{{\bf Pion WebRTC}} - \it{Pure Golang implementation of WebRTC.} \\
 \textup{Creator, Implemented SRTP, SCTP, STUN and ICE. No 3rd party library usage.}\\
+\\
+\href{https://webrtcforthecurious.com}{{\bf WebRTC for the Curious}} - \it{A book on how WebRTC really works.} \\
+\textup{Author, learn about the protocols of WebRTC. A book that goes beyond the APIs.}\\
 \\
 \href{https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-c}{{\bf amazon-kinesis-video-streams-webrtc-sdk-c}} - \it{Embedded WebRTC Implementation} \\
 \textup{Designed and worked with team of 5 to implement. Used in IoT/Robotics.}\\
