--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,13 @@
 
 \section{\centerline{EXPERIENCE}}
 
-\href{https://amazon.com/}{{\it Amazon}} - American electronic commerce and cloud computing company \hfill {\bf 2018 - *\space \space \space}
+\href{https://apple.com/}{{\it Apple}} - Technology company that specializes in electronics, software, and online services.  \hfill {\bf 2020 - *\space \space \space}
+\begin{itemize}  \itemsep -2pt
+    \item Built FaceTime links, service that allows users to join FaceTime from a web browser
+    \item Designed and implemented media Quality of Service subsystems
+\end{itemize}
+
+\href{https://amazon.com/}{{\it Amazon}} - American electronic commerce and cloud computing company \hfill {\bf 2018 - 2020\space \space \space}
 \begin{itemize}  \itemsep -2pt
     \item Designed and implemented Pure C WebRTC implementation for embedded devices
     \item Worked on Chromium on Android/Linux/Windows, the foundation for Amazon Silk
@@ -43,17 +49,11 @@
     \item Ported frontend to Angular/Bootstrap, replacing projects in Dojo and jQuery
 \end{itemize}
 
-\href{http://www.saicorporate.com}{{\it System Associates}} - Developer of full stack software and hardware for major hotels {\bf \hfill 2012 - 2016 }
+\href{http://www.saicorporate.com}{{\it System Associates}} - Developer of full stack software and hardware for major hotels {\bf \hfill 2011 - 2016 }
 \begin{itemize}  \itemsep -2pt
     \item Used Asterisk with custom Dialplan and Applications written in C to create a hosted PBX
     \item Created a deployment system using git so updates and new installs can be done seamlessly
     \item Developed a web interface to manage PBX
-\end{itemize}
-
-\href{http://www.vpcusa.com}{{\it Virtual Technologies Group}} - VoIP and IT services provider {\bf \hfill 2011 - 2012 }
-\begin{itemize}  \itemsep -2pt
-    \item Wrote custom dialplan for school systems
-    \item Created a web portal that simplified a multi-day PBX order/setup process to 5 minutes
 \end{itemize}
 
 \section{\centerline{PROJECTS}}
