Add Twitch and LiveKit to resume

--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,20 @@
 
 \section{\centerline{EXPERIENCE}}
 
-\href{https://apple.com/}{{\it Apple}} - Technology company that specializes in electronics, software, and online services.  \hfill {\bf 2020 - *\space \space \space}
+\href{https://www.livekit.io/}{{\it LiveKit}} - Open Source WebRTC stack for building scalable, real-time audio and video experiences.  \hfill {\bf 2024 - *\space \space \space}
+\begin{itemize}  \itemsep -2pt
+    \item Designed and Implemented SIP support for LiveKit
+    \item Responsible for customer success/integration challenges
+    \item Performed outbound sales/cold calling
+\end{itemize}
+
+\href{https://www.twitch.tv/}{{\it Twitch}} - Interactive livestreaming service for gaming, entertainment, sports, music, and more.  \hfill {\bf 2021 - 2024\space \space \space}
+\begin{itemize}  \itemsep -2pt
+    \item Built 'Stream Together', co-streaming for broadcasters on Pion
+    \item Added WebRTC to \href{https://obsproject.com}{{\bf Open Broadcaster Software}}
+\end{itemize}
+
+\href{https://apple.com/}{{\it Apple}} - Technology company that specializes in electronics, software, and online services.  \hfill {\bf 2020 - 2021\space \space \space}
 \begin{itemize}  \itemsep -2pt
     \item Built FaceTime links, service that allows users to join FaceTime from a web browser
     \item Designed and implemented media Quality of Service subsystems
@@ -30,30 +43,15 @@
 \href{https://infiniscene.com/}{{\it Infiniscene}} - broadcast studio built on the web \hfill {\bf 2016 - 2018}
 \begin{itemize}  \itemsep -2pt
     \item Wrote cloud compositing engine, ingestion of many sources and output to many destinations
-    \item Created ingestion engine, handles multiple popular transports RTP/UDT/SRT/RTMP
+    \item Created ingestion engine, handles multiple popular transports RTP/UDT/SRT/RTMP/WebRTC/FTL
     \item Deep WebRTC usage, worked with ICE/DTLS/Custom signaling in GStreamer
     \item Created H264 analyzer to educate users, parsing byte-stream to warn about unsupported features
-    \item Updated developer tooling, moved developers over to shared Docker workflow
-\end{itemize}
-
-\href{https://www.etsy.com/}{{\it Etsy}} - e-commerce website focused on handmade {\bf \hfill 2014 - 2016}
-\begin{itemize}  \itemsep -2pt
-    \item Improved \href{https://github.com/elasticsearch/kibana}{{\it Kibana}}, adding aggregations and features for internal use
-    \item Worked on internal IRC client that aimed to humanize users, adding proprietary extensions
-    \item Upgraded Etsy to PHP 7, which involved porting multiple language extensions written in C
-\end{itemize}
-
-\href{http://www.onshored.com}{{\it onShore Development}} - Creator of Webcheckout, an scheduling and asset management application {\bf \hfill 2013 - 2014 }
-\begin{itemize}  \itemsep -2pt
-    \item Converted Web App to be API driven, using Common Lisp and PostgreSQL on the backend
-    \item Ported frontend to Angular/Bootstrap, replacing projects in Dojo and jQuery
 \end{itemize}
 
 \href{http://www.saicorporate.com}{{\it System Associates}} - Developer of full stack software and hardware for major hotels {\bf \hfill 2011 - 2016 }
 \begin{itemize}  \itemsep -2pt
-    \item Used Asterisk with custom Dialplan and Applications written in C to create a hosted PBX
-    \item Created a deployment system using git so updates and new installs can be done seamlessly
-    \item Developed a web interface to manage PBX
+    \item Wrote Dialplan and Applications in C for Asterisk
+    \item Developed a web interface so non-technical users could manage system
 \end{itemize}
 
 \section{\centerline{PROJECTS}}
@@ -67,6 +65,9 @@
 \href{https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-c}{{\bf amazon-kinesis-video-streams-webrtc-sdk-c}} - \it{Embedded WebRTC Implementation} \\
 \textup{Designed and worked with team of 5 to implement. Used in IoT/Robotics.}\\
 \\
+\href{https://obsproject.com}{{\bf Open Broadcaster Software}} - \it{Open cross-platform screencasting and streaming app} \\
+\textup{Added WebRTC outputs and sources}\\
+\\
 \href{https://gstreamer.freedesktop.org}{{\bf GStreamer}} - \it{Free pipeline-based multimedia framework.} \\
 \textup{Added \href{https://github.com/GStreamer/gst-plugins-bad/commits/master/ext/aom}{{\bf AV1}} support. Fixed bugs, added flvmux feature}\\
 \\
@@ -79,8 +80,6 @@
 \href{https://www.chromium.org/}{{\bf Chromium}} - \it{open-source Web browser project started by Google} \\
 \textup{Added support for Mediatek WebRTC H264 encoding on Android}\\
 \\
-\href{https://github.com/Sean-Der/fail2web}{{\bf fail2web}} - \it{fail2ban GUI, written with Go and AngularJS.} \\
-\textup{Creator, contributed to \href{https://github.com/fail2ban/fail2ban}{{\bf fail2ban}} and \href{https://github.com/kisielk/og-rek}{{\bf ogorek}}}\\
 
 \end{resume}
 \end{document}
